--- a/composer.json
+++ b/composer.json
@@ -7,6 +7,7 @@
     "license": "MIT",
     "require": {
         "php": "^8.2",
+        "ext-pdo_pgsql": "*",
         "filament/filament": "^3.2",
         "flowframe/laravel-trend": "^0.4.0",
         "laravel/framework": "^11.31",
